Refactor project structure and add shear wall functionality
- Updated namespaces in BeamExtractor and BeamData for better organization.
- Commented out the import beams button and added an import walls button in MainWindow.xaml.
- Modified ColumnUtilities to streamline dependencies.
- Introduced ShearWallData model and added functionality to MainWindowViewModel for importing shear walls.
- Added ShearWallHelpers for utility methods and ShearWallUtilities for managing shear wall operations.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -49,9 +49,9 @@
 
         <Button Grid.Row="2" Content="Import Columns" Command="{Binding PushColumnsToEtabsCommand}"
                 Margin="0 5"/>
-        <Button Grid.Row="3" Content="Import Beams" Command="{Binding PushColumnsToEtabsCommand}"
-                Margin="0 5"/>
-        <Button Grid.Row="4" Content="Import Walls" Command="{Binding PushColumnsToEtabsCommand}"
+        <!--<Button Grid.Row="3" Content="Import Beams" Command="{Binding PushColumnsToEtabsCommand}"
+                Margin="0 5"/>-->
+        <Button Grid.Row="4" Content="Import Walls"  Command="{Binding PushWallsToEtabsCommand}"
                 Margin="0 5"/>
     </Grid>
 </Window>
