edit beams and solve the problem

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -51,7 +51,7 @@
                 Margin="0 5"/>
         <!--<Button Grid.Row="3" Content="Import Beams" Command="{Binding PushColumnsToEtabsCommand}"
                 Margin="0 5"/>-->
-        <Button Grid.Row="4" Content="Import Walls" Command="{Binding ExportWallsToEtabsCommand}"
+        <Button Grid.Row="4" Content="Import Beams" Command="{Binding PushBeamsToEtabsCommand}"
                 Margin="0 5"/>
     </Grid>
 </Window>
