Update UI for wall imports and modify view model logic
Removed the "Import Beams" button and added "Import Walls" button in MainWindow.xaml. Introduced the `ExportWallsToEtabs` method in MainWindowViewModel.cs for wall data export functionality. Modified `PushColumnsToEtabs` method by removing the unit setting line, indicating a change in unit management.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -49,8 +49,8 @@
 
         <Button Grid.Row="2" Content="Import Columns" Command="{Binding PushColumnsToEtabsCommand}"
                 Margin="0 5"/>
-        <!--<Button Grid.Row="3" Content="Import Beams" Command="{Binding PushColumnsToEtabsCommand}"
-                Margin="0 5"/>-->
+        <Button Grid.Row="3" Content="Import Walls" Command="{Binding ExportWallsToEtabsCommand}"
+                Margin="0 5"/>
         <Button Grid.Row="4" Content="Import Beams" Command="{Binding PushBeamsToEtabsCommand}"
                 Margin="0 5"/>
     </Grid>
