Add Styles project and consolidate UI styles
- Introduced a new "Styles" project with `Styles.csproj`.
- Updated solution configuration to include the new project.
- Added project references to "Styles" in `FromRevit.csproj` and `ToEtabs.csproj`.
- Replaced existing CheckBox and Button styles in `MainView.xaml` and `MainWindow.xaml` with a reference to `MasterStyles.xaml`.
- Created `MasterStyles.xaml` to merge styles from `CheckBox.xaml` and `Button.xaml`.
- Updated `AssemblyInfo.cs` to include WPF theme information.
- Configured `Styles.csproj` for WPF development targeting .NET Framework 4.8.

--- a/FromRevit/Views/MainView.xaml
+++ b/FromRevit/Views/MainView.xaml
@@ -11,36 +11,7 @@
         Title="RevitExporter" Height="200" Width="200">
 
     <Window.Resources>
-        <Style TargetType="CheckBox">
-            <Setter Property="Margin" Value="0 2.5" />
-            <Setter Property="FontSize" Value="14" />
-            <Setter Property="FontWeight" Value="SemiBold" />
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Width" Value="100" />
-            <Setter Property="Height" Value="30" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="Background" Value="#00008b" />
-            <Setter Property="FontWeight" Value="SemiBold" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#2875b9" />
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Background" Value="Gray" />
-                    <Setter Property="Foreground" Value="LightGray" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        <ResourceDictionary Source="pack://application:,,,/Styles;component/MasterStyles.xaml" />
     </Window.Resources>
 
     <Window.InputBindings>
