Update Revit add-in paths and enhance UI components
- Changed assembly path in `FromRevit.addin`.
- Updated `FromRevit.csproj` to define add-in and plugin folder paths, and modified post-build events for folder creation and file copying.
- Rearranged attributes for better readability in `MainView.xaml`.
- Added new button styles in `Button.xaml` for improved appearance.
- Implemented a custom control template for checkboxes in `CheckBox.xaml`.
- Adjusted merged dictionaries in `MasterStyles.xaml` to include new checkbox styles.
- Made minor layout adjustments in `MainWindow.xaml`.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -27,14 +27,13 @@
                   ItemsSource="{Binding DefinedConcreteMatrial}"
                   SelectedItem="{Binding SelectedConcreteMaterial, Mode=TwoWay}"
                   Margin="0 5" />
-
-        <StackPanel Grid.Row="1" Margin="2.5 2.5">
-            <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" />
+        <StackPanel Grid.Row="1" Margin="2.5">
+            <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}"  />
             <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}" />
             <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}" />
             <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}" />
         </StackPanel>
-
-        <Button Grid.Row="2" Content="Import Elements" Command="{Binding ExportElementsCommand}" />
+        <Button  Grid.Row="2" Content="Import Elements"
+                Command="{Binding ExportElementsCommand}" />
     </Grid>
 </Window>
