--- a/FromRevit/Views/MainView.xaml
+++ b/FromRevit/Views/MainView.xaml
@@ -33,6 +33,7 @@
             <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}" />
             <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}" />
         </StackPanel>
-        <Button Grid.Row="1" Content="Export" Command="{Binding ExportDataCommand}" />
+        <Button Grid.Row="1" Content="Export"
+                Command="{Binding ExportDataCommand}" />
     </Grid>
 </Window>
