Enhance UI with new styles and layout adjustments
- Updated `MainView.xaml` and `MainWindow.xaml` to increase window dimensions.
- Added `ComboBox.xaml` and `TextBox.xaml` styles to `MasterStyles.xaml`.
- Modified ComboBox in `MainWindow.xaml` to include a placeholder and new style.
- Repositioned GroupBox elements and adjusted layout for buttons and text blocks.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -7,7 +7,7 @@
         d:DataContext="{d:DesignInstance Type=viewModels:MainWindowViewModel, IsDesignTimeCreatable=False}"
         xmlns:local="clr-namespace:ToEtabs"
         mc:Ignorable="d"
-        Title="From Revit To Etabs" Height="350" Width="200"
+        Title="From Revit To Etabs" Height="400" Width="250"
         WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
@@ -24,12 +24,12 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ComboBox Width="150" HorizontalAlignment="Right"
-                  ItemsSource="{Binding DefinedConcreteMatrial}"
+        <ComboBox  Grid.Row="1" ItemsSource="{Binding DefinedConcreteMatrial}"
                   SelectedItem="{Binding SelectedConcreteMaterial, Mode=TwoWay}"
-                  Margin="0 5" />
+                  Tag="Select concrete Matrial ..."
+                  Style="{StaticResource ModernComboBoxWithPlaceholderStyle}"/>
 
-        <GroupBox Grid.Row="1" Header="Elements" Margin="0 5">
+        <GroupBox Grid.Row="2" Header="Elements" Margin="0 5">
             <StackPanel Margin="2.5">
                 <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" Margin="0 2" />
                 <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}" Margin="0 2" />
@@ -38,16 +38,16 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="2" Header="Loads" Margin="0 5">
+        <GroupBox Grid.Row="3" Header="Loads" Margin="0 5">
             <StackPanel Margin="2.5">
                 <CheckBox Content="Loads" IsChecked="{Binding IsLoadsChecked}" Margin="0 2" />
             </StackPanel>
         </GroupBox>
 
-        <Button Grid.Row="3" Content="Browse File"
-                Command="{Binding BrowseFileCommand}" Margin="0 5" />
-        <Button Grid.Row="4" Content="Import selected"
-                Command="{Binding ExportElementsCommand}" Margin="0 5" />
-        <TextBlock Grid.Row="5" Text="{Binding SelectedFilePath}" Margin="0 5" />
+        <Button Grid.Row="4" Content="Browse File"
+                Command="{Binding BrowseFileCommand}" />
+        <Button Grid.Row="5" Content="Import selected"
+                Command="{Binding ExportElementsCommand}" />
+        <TextBlock Grid.Row="6" Text="{Binding SelectedFilePath}" />
     </Grid>
 </Window>
