Enhance UI layout and improve control styles
Updated MainView.xaml to increase window height and
replace StackPanel with GroupBox for better checkbox
organization. Adjusted Button.xaml for code formatting,
modified ComboBox.xaml for improved height and layout,
and retained ComboBox styles in MasterStyles.xaml.
Added Ctrl + A input binding in MainWindow.xaml for
selecting all items, ensuring consistent styling for
ComboBox elements.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -13,7 +13,13 @@
     <Window.Resources>
         <ResourceDictionary Source="pack://application:,,,/Styles;component/MasterStyles.xaml" />
     </Window.Resources>
-
+    
+    <Window.InputBindings>
+        <KeyBinding Key="A"
+                    Modifiers="Control"
+                    Command="{Binding SelectAllCommand}" />
+    </Window.InputBindings>
+    
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,7 +30,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ComboBox  Grid.Row="1" ItemsSource="{Binding DefinedConcreteMatrial}"
+        <ComboBox Grid.Row="1" ItemsSource="{Binding DefinedConcreteMatrial}"
                   SelectedItem="{Binding SelectedConcreteMaterial, Mode=TwoWay}"
                   Tag="Select concrete Matrial ..."
                   Style="{StaticResource ModernComboBoxWithPlaceholderStyle}"/>
