--- a/FromRevit/Views/MainView.xaml
+++ b/FromRevit/Views/MainView.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:FromRevit.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="RevitExporter" Height="200" Width="250">
+        Title="RevitExporter" Height="250" Width="250">
 
     <Window.Resources>
         <ResourceDictionary Source="pack://application:,,,/Styles;component/MasterStyles.xaml" />
@@ -27,12 +27,14 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Margin="5">
-            <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" />
-            <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}" />
-            <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}" />
-            <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}" />
-        </StackPanel>
+        <GroupBox  Header="Elements" Margin="0 5">
+            <StackPanel Margin="2.5">
+                <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" />
+                <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}" />
+                <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}" />
+                <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}" />
+            </StackPanel>
+        </GroupBox>
         <Button Grid.Row="1" Content="Export"
                 Command="{Binding ExportDataCommand}" />
     </Grid>
