--- a/Styles/ComboBox.xaml
+++ b/Styles/ComboBox.xaml
@@ -4,7 +4,7 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="White"/>
         <Setter Property="Width" Value="200"/>
-        <Setter Property="Height" Value="30"/>
+        <Setter Property="Height" Value="35"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Padding" Value="4,2"/>
         <Setter Property="BorderBrush" Value="#CCC"/>
@@ -15,61 +15,62 @@
             <Setter.Value>
                 <ControlTemplate TargetType="ComboBox">
                     <Grid>
-                        <Border 
-                        x:Name="Border"
-                        Background="{TemplateBinding Background}" 
-                        BorderBrush="{TemplateBinding BorderBrush}" 
-                        BorderThickness="{TemplateBinding BorderThickness}" 
-                        CornerRadius="4">
-                            <DockPanel Margin="4,0,25,0">
-                                <ContentPresenter 
-                                x:Name="ContentSite"
-                                Content="{TemplateBinding SelectionBoxItem}"
-                                ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
-                                VerticalAlignment="Center" 
-                                HorizontalAlignment="Left"
-                                RecognizesAccessKey="True"/>
-                                <TextBlock 
-                                x:Name="Placeholder"
-                                Text="{TemplateBinding Tag}"
-                                VerticalAlignment="Center"
-                                Foreground="#888"
-                                IsHitTestVisible="False"
-                                Margin="2,0,0,0"
-                                Visibility="Collapsed" />
-                            </DockPanel>
-                        </Border>
                         <ToggleButton 
-                        Grid.Column="1" 
-                        Focusable="False" 
-                        IsChecked="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
-                        ClickMode="Press" 
-                        Background="Transparent" 
-                        BorderBrush="{x:Null}" 
-                        HorizontalAlignment="Right" 
-                        VerticalAlignment="Center"
-                        Margin="0">
-                            <Path 
-                            VerticalAlignment="Center" 
-                            HorizontalAlignment="Center" 
-                            Data="M 0 0 L 4 4 L 8 0 Z" 
-                            Fill="Gray" 
-                            Width="10" 
-                            Height="5"/>
-                        </ToggleButton>
-                        <Popup 
-                        Name="PART_Popup" 
-                        Placement="Bottom" 
-                        IsOpen="{TemplateBinding IsDropDownOpen}" 
-                        AllowsTransparency="True" 
-                        Focusable="False" 
-                        PopupAnimation="Slide">
+                            Name="ToggleButton"
+                            IsChecked="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
+                            ClickMode="Press"
+                            Background="Transparent"
+                            BorderBrush="{x:Null}">
                             <Border 
-                            Margin="0,2,0,0"
-                            Background="White" 
-                            BorderBrush="#CCC" 
-                            BorderThickness="1" 
-                            CornerRadius="4">
+                                x:Name="Border"
+                                Background="{TemplateBinding Background}" 
+                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                CornerRadius="4">
+                                <Grid>
+                                    <DockPanel Margin="4,0,25,0">
+                                        <ContentPresenter 
+                                            x:Name="ContentSite"
+                                            Content="{TemplateBinding SelectionBoxItem}"
+                                            ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+                                            VerticalAlignment="Center" 
+                                            HorizontalAlignment="Left"
+                                            RecognizesAccessKey="True"/>
+                                        <TextBlock 
+                                            x:Name="Placeholder"
+                                            Text="{TemplateBinding Tag}"
+                                            VerticalAlignment="Center"
+                                            Foreground="#888"
+                                            IsHitTestVisible="False"
+                                            Margin="2,0,0,0"
+                                            Visibility="Collapsed"/>
+                                    </DockPanel>
+                                    <Path 
+                                        VerticalAlignment="Center" 
+                                        HorizontalAlignment="Right" 
+                                        Margin="0,0,8,0"
+                                        Data="M 0 0 L 4 4 L 8 0 Z" 
+                                        Fill="Gray" 
+                                        Width="10" 
+                                        Height="5"/>
+                                </Grid>
+                            </Border>
+                        </ToggleButton>
+
+                        <!-- Dropdown Items -->
+                        <Popup 
+                            Name="PART_Popup" 
+                            Placement="Bottom" 
+                            IsOpen="{TemplateBinding IsDropDownOpen}" 
+                            AllowsTransparency="True" 
+                            Focusable="False" 
+                            PopupAnimation="Slide">
+                            <Border 
+                                Margin="0,2,0,0"
+                                Background="White" 
+                                BorderBrush="#CCC" 
+                                BorderThickness="1" 
+                                CornerRadius="4">
                                 <ScrollViewer Margin="4" SnapsToDevicePixels="True">
                                     <StackPanel IsItemsHost="True" />
                                 </ScrollViewer>
