Refactor project structure and update data models
- Removed references to `FromEtabs` and `LoadData` projects from the solution.
- Replaced `BeamData` with `BeamGeometryData` in the `ElementsData` namespace.
- Updated `Beams.cs` to use `GetBeamGeometryData` for beam data retrieval.
- Modified `MainViewViewModel.cs` to utilize the new beam data structure.
- Enhanced `ReinforcementOfConcreteColumns` with new methods for updated data handling.
- Updated `cPlugin.cs` to incorporate `FrameRCData` and `BeamRCData` classes.
- Streamlined `LoadHelper` by removing unused methods and improving SI unit conversion.
- Adjusted `ImportBeam` and `ImportLoad` classes for compatibility with new data structures.
- Revised UI in `MainWindow.xaml` and `MainWindow.xaml.cs` to reflect data model changes.
- Simplified `Logger` class to focus on essential logging functions.
- Updated utility classes (`BeamUtilities`, `LoadUtilities`, `MatrialProperties`) for compatibility with new data structures.
- Introduced `SapModelUtitlites` class for utility functions related to `cSapModel`.

--- a/ToEtabs/MainWindow.xaml
+++ b/ToEtabs/MainWindow.xaml
@@ -7,7 +7,7 @@
         d:DataContext="{d:DesignInstance Type=viewModels:MainWindowViewModel, IsDesignTimeCreatable=False}"
         xmlns:local="clr-namespace:ToEtabs"
         mc:Ignorable="d"
-        Title="From Revit To Etabs" Height="400" Width="250"
+        Title="From Revit To Etabs" Height="300" Width="250"
         WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
@@ -25,35 +25,23 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ComboBox Grid.Row="1" ItemsSource="{Binding DefinedConcreteMatrial}"
+        <ComboBox ItemsSource="{Binding DefinedConcreteMatrial}"
                   SelectedItem="{Binding SelectedConcreteMaterial, Mode=TwoWay}"
                   Tag="Select concrete Matrial ..."
                   Style="{StaticResource ModernComboBoxWithPlaceholderStyle}"/>
 
-        <GroupBox Grid.Row="2" Header="Elements" Margin="0 5">
+        <GroupBox Grid.Row="1" Header="Elements" Margin="0 5">
             <StackPanel Margin="2.5">
-                <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" Margin="0 2" />
-                <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}" Margin="0 2" />
-                <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}" Margin="0 2" />
-                <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}" Margin="0 2" />
+                <CheckBox Content="Columns" IsChecked="{Binding IsColumnsChecked}" />
+                <CheckBox Content="Walls" IsChecked="{Binding IsWallsChecked}"  />
+                <CheckBox Content="Beams" IsChecked="{Binding IsBeamsChecked}"  />
+                <CheckBox Content="Slabs" IsChecked="{Binding IsSlabsChecked}"  />
             </StackPanel>
         </GroupBox>
-
-        <GroupBox Grid.Row="3" Header="Loads" Margin="0 5">
-            <StackPanel Margin="2.5">
-                <CheckBox Content="Loads" IsChecked="{Binding IsLoadsChecked}" Margin="0 2" />
-            </StackPanel>
-        </GroupBox>
-
-        <Button Grid.Row="4" Content="Browse File"
-                Command="{Binding BrowseFileCommand}" />
-        <Button Grid.Row="5" Content="Import selected"
-                Command="{Binding ExportElementsCommand}" />
-        <TextBlock Grid.Row="6" Text="{Binding SelectedFilePath}" />
+       
+        <Button Grid.Row="2" Content="Import Elemnts"
+                Command="{Binding ImportElementsCommand}" />
     </Grid>
 </Window>
